# my-django-rest-framework

./: .dockerignore  .env  docker-compose.dev.yml  main.py  pyproject.toml
my_django_rest_framework/: .dockerignore  Dockerfile.django  db.sqlite3  manage.py
my_django_rest_framework/drf/: models.py  serializers.py
my_django_rest_framework/drf/migrations/: 0001_initial.py
my_django_rest_framework/homework/: models.py  serializers.py  urls.py  views.py
my_django_rest_framework/homework/migrations/: 0001_initial.py
my_django_rest_framework/my_django_rest_framework/: .env  asgi.py  config.py  settings.py  urls.py  wsgi.py
my_django_rest_framework/my_drf/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
my_django_rest_framework/my_drf/migrations/: 0001_initial.py
my_django_rest_framework/signals_practice/: apps.py
my_django_rest_framework/test_permission/: apps.py
my_django_rest_framework/users/: admin.py  apps.py  forms.py  models.py  serializers.py  signals.py  urls.py  views.py
my_django_rest_framework/users/migrations/: 0001_initial.py  0002_customuser_bio.py  0003_customuser_github_profile_customuser_is_available_and_more.py
